# drf_template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.gitflow.yaml  Taskfile.yaml  devbox.json  mkdocs.yml  notebook.ipynb  pyproject.toml  pytest.ini  versions.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/prompts/: feature.prompt.md  refactor.prompt.md  security.prompt.md  test-model.prompt.md  test-view.prompt.md
.github/workflows/: codeql.yml  test.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/ai_tools/: index.html
0.2.0/ai_tools/cline_roocode/: index.html
0.2.0/ai_tools/copilot/: index.html
0.2.0/ai_tools/gemini/: index.html
0.2.0/authentication/: index.html
0.2.0/auto_documentation/: index.html
0.2.0/core_endpoints/: index.html
0.2.0/database_seeding/: index.html
0.2.0/dependencies/: index.html
0.2.0/development/: index.html
0.2.0/environment_setup/: index.html
0.2.0/logging/: index.html
0.2.0/project_structure/: index.html
0.2.0/rate_limiting/: index.html
0.2.0/settings/: index.html
0.2.0/tasks/: index.html
0.2.0/testing/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/ai_tools/: index.html
0.2.1/ai_tools/cline_roocode/: index.html
0.2.1/ai_tools/copilot/: index.html
0.2.1/ai_tools/gemini/: index.html
0.2.1/authentication/: index.html
0.2.1/auto_documentation/: index.html
0.2.1/core_endpoints/: index.html
0.2.1/database_seeding/: index.html
0.2.1/dependencies/: index.html
0.2.1/development/: index.html
0.2.1/environment_setup/: index.html
0.2.1/logging/: index.html
0.2.1/project_structure/: index.html
0.2.1/rate_limiting/: index.html
0.2.1/settings/: index.html
0.2.1/tasks/: index.html
0.2.1/testing/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/ai_tools/: index.html
0.2.2/ai_tools/cline_roocode/: index.html
0.2.2/ai_tools/copilot/: index.html
0.2.2/ai_tools/gemini/: index.html
0.2.2/authentication/: index.html
0.2.2/auto_documentation/: index.html
0.2.2/core_endpoints/: index.html
0.2.2/database_seeding/: index.html
0.2.2/dependencies/: index.html
0.2.2/development/: index.html
0.2.2/environment_setup/: index.html
0.2.2/logging/: index.html
0.2.2/project_structure/: index.html
0.2.2/rate_limiting/: index.html
0.2.2/search/: search_index.json
0.2.2/settings/: index.html
0.2.2/tasks/: index.html
0.2.2/testing/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/ai_tools/: index.html
0.2.3/ai_tools/cline_roocode/: index.html
0.2.3/ai_tools/copilot/: index.html
0.2.3/ai_tools/gemini/: index.html
0.2.3/authentication/: index.html
0.2.3/auto_documentation/: index.html
0.2.3/core_endpoints/: index.html
0.2.3/database_seeding/: index.html
0.2.3/dependencies/: index.html
0.2.3/development/: index.html
0.2.3/environment_setup/: index.html
0.2.3/logging/: index.html
0.2.3/project_structure/: index.html
0.2.3/rate_limiting/: index.html
0.2.3/settings/: index.html
0.2.3/tasks/: index.html
0.2.3/testing/: index.html
apps/core/: middleware.py
apps/core/management/commands/: seed.py
apps/core/tests/: test_core_views.py
apps/ntier/: apps.py
apps/ntier_simple/: apps.py
apps/ntier_simple_example/: 0-booking_facade.py  README.md  admin.py  apps.py  booking_facade.py  domain.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/ntier_simple_example/migrations/: 0001_initial.py
apps/ntier_simple_example/tests/0-unit/: test_services.py  test_views.py
apps/ntier_simple_example/tests/unit/: test_services.py  test_views.py
apps/users/: admin.py  managers.py  schema.py  serializers.py  views.py
apps/users/tests/: test_create_user_view.py  test_login_view.py  test_profile_view.py
conf/: settings.py  urls.py
latest/: 404.html  index.html
latest/ai_tools/: index.html
latest/ai_tools/cline_roocode/: index.html
latest/ai_tools/copilot/: index.html
latest/ai_tools/gemini/: index.html
latest/authentication/: index.html
latest/auto_documentation/: index.html
latest/core_endpoints/: index.html
latest/database_seeding/: index.html
latest/dependencies/: index.html
latest/development/: index.html
latest/environment_setup/: index.html
latest/logging/: index.html
latest/project_structure/: index.html
latest/rate_limiting/: index.html
latest/settings/: index.html
latest/tasks/: index.html
latest/testing/: index.html
scripts/: bump.py  django.py
templates/: 404.html  500.html  index.html
